fixing spacing under search buttoms and right alignment of give leaf

--- a/sites/all/themes/library_bootstrap_subtheme/less/style.less
+++ b/sites/all/themes/library_bootstrap_subtheme/less/style.less
@@ -332,7 +332,7 @@ body {
 	}
 	.search-buttons {
 		padding-top: 12%;
-		padding-bottom: 11%;
+		padding-bottom: 13%;
 		padding-left: 7%;
 		padding-right: 8%;
 	}
@@ -674,6 +674,7 @@ h3 {
 		width:45%;
 		display:inline-block;
 		margin-top:-35px;
+		margin-right:-50px;
 	}
 }
 .give:hover {
